# LABS

./: .gitignore  CMakeLists.txt  README.md  TODO  tmp.json
downloads/: BV1Rh411E7L1_info.json
include/ffmpeg/libavutil/: ffversion.h
py_net/: main.py
qss/: bili_label.qss  button.qss  line_edit.qss  love_btn.qss  mute_btn.qss  play_control_btn.qss  play_mode_btn.qss  radius_widget.qss  slider_groove.qss  slider_handle.qss  table_view.qss  time_image_label.qss  time_label.qss  time_text_label.qss  title_widget.qss  widget.qss
resources/: res.qrc
src/: betterslider.cpp  betterslider.h  betterslider.ui  bettertableview.cpp  bettertableview.h  bettertableview.ui  biliinfo.h  biliinfowidget.cpp  biliinfowidget.h  biliinfowidget.ui  lyricswidget.cpp  lyricswidget.h  lyricswidget.ui  main.cpp  networkobj.cpp  networkobj.h  notificationwidget.cpp  notificationwidget.h  notificationwidget.ui  processobj.cpp  processobj.h  songmanager.h  thememanager.cpp  thememanager.h  titlewidget.cpp  titlewidget.h  titlewidget.ui  visualiserwidget.cpp  visualiserwidget.h  visualiserwidget.ui  widget.cpp  widget.h  widget.ui
themes/: default_theme.json
